# NaiveServ

./: CMakeLists.txt  README.md
sample/: Makefile
src/: main.cpp
src/config/: config.cpp  config.h
src/daemon/: daemon.cpp  daemon.h
src/http/: parser.cpp  parser.h  response.cpp  response.h
src/server/: core.cpp  core.h  worker.cpp  worker.h
src/server/responder/: normal.h  responder.cpp  responder.h  router.cpp  router.h  table.h
src/server/responder/impl/: debug.cpp  debug.h  normal.cpp  normal.h
src/sock/: sock.cpp  sock.h
src/util/: logger.cpp  logger.h  os.h  singleton.h  strop.h  version.h
test/: parse_test_do_not_open_this_shit_.cpp  parser_test.cpp  response_test.cpp  response_text.cpp  singleton_test.cpp  sock_test.cpp
